add comment 'concatenation - string'

--- a/lesson_1.html
+++ b/lesson_1.html
@@ -13,7 +13,7 @@
 
     		//3
     		var concatenation = 1000 + '108';
-    		console.log ('1000 + "108" = ' + concatenation);
+    		console.log ('1000 + "108" = ' + concatenation); //concatenation type - string
     	</script>
     </body>
 </html>
